# LVMCM_src

./: .gitignore  Intel_comp_impl.md  README.md
LVMCM/: CMakeLists.txt  CommunityDynamics.cpp  CommunityDynamics.h  LVMCM_mpi.def  LVMCM_rng.cpp  LVMCM_rng.h  Metacommunity.cpp  Metacommunity.h  ODE.cc  ODE.h  Species.cpp  Species.h  Topography.cpp  Topography.h  error.cc  error.h  example.md  main.cpp  main.cpp.orig  testODE.cpp
LVMCM/RCode/: autonomous_turnover_example.R
LVMCM/ReferenceManual/: LVMCM reference manual.md
LVMCM/autonomous_turnover_example/: autonomous_turnover_example.csv
LVMCM/parFiles/autonomous_turnover_example/: autonomous_turnover_example_pars.txt
LVMCM/shFiles/autonomous_turnover_example/: autonomous_turnover_example.sh
